Apply suggestions from Yan's code review
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -97,7 +97,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 Gatsby has several top-level configuration files that also include site and page metadata and are used for routing. You will not use any of these `gatsby-*.js` files in your Astro project, but there may be some content that you can reuse:
 
-- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts etc.) into page layouts.
+- `gatsby-config.js`: Move your `siteMetadata: {}` into `src/data/siteMetadata.js` (or `siteMetadata.json`) to import data about your site (title, description, social accounts, etc.) into page layouts.
 
 - `gatsby-browser.js`: Consider adding anything used here directly into your main layout's `<head>` tag.
 
@@ -116,11 +116,11 @@ Gatsby has several top-level configuration files that also include site and page
 
     Astro uses a folder called `public/` for static assets. You can alternatively copy the contents of `static/` into your existing Astro `public/` folder.
 
-3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages` etc.) as needed into your Astro `src/` folder as you rebuild your site, following [Astro's project structure](/en/core-concepts/project-structure/).
+3. **Copy or Move** Gatsby's other files and folders (e.g. `components`, `pages`, etc.) as needed into your Astro `src/` folder as you rebuild your site, following [Astro's project structure](/en/core-concepts/project-structure/).
 
-  Astro's `src/pages/` folder is a special folder used for file-based routing to create your site's pages and posts from `.astro`, `.md` and `.mdx` files. You will not have to configure any routing behavior for your Astro, Markdown and MDX files.
+  Astro's `src/pages/` folder is a special folder used for file-based routing to create your site's pages and posts from `.astro`, `.md` and `.mdx` files. You will not have to configure any routing behavior for your Astro, Markdown, and MDX files.
 
-  All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
+  All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, and `src/scripts`.
 
 
 ### Convert JSX files to `.astro` files
@@ -261,7 +261,7 @@ Note the standard HTML templating, and direct access to `<head>`:
 </html>
 ```
 
-You may also wish to reuse code from Gatsby's `src/components/seo.js` to include additional site meta data. Notice that Astro uses neither `<Helmet>` nor `<Header>` but instead creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
+You may also wish to reuse code from Gatsby's `src/components/seo.js` to include additional site metadata. Notice that Astro uses neither `<Helmet>` nor `<Header>` but instead creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
 
 ### Migrating Pages and Posts
 
@@ -275,13 +275,13 @@ These `.astro` pages must be located within `src/pages/` and will have page rout
 
 #### Markdown and MDX pages
 
-Astro has built-in support for Markdown and an optional integration for MDX files. Your existing [Markdown and MDX files](/en/guides/markdown-content/) can be reused, but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
+Astro has built-in support for Markdown and an optional integration for MDX files. Your existing [Markdown and MDX files](/en/guides/markdown-content/) can be reused but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
 
 When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
 ### Migrating Tests
 
-As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box, if you have been able to match the markup of the older Gatsby site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
+As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box if you have been able to match the markup of the older Gatsby site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
 
 See Astro's [testing guide](/en/guides/testing/) for more.
 
@@ -353,9 +353,9 @@ Convert any inline style objects (`style={{ fontWeight: "bold" }}`) to inline HT
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
-You may also need to replace any CSS-in-JS libraries (e.g. styled components) with other available CSS options in Astro.
+You may also need to replace any CSS-in-JS libraries (e.g. styled-components) with other available CSS options in Astro.
 
-Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code required!
+Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
 
 Global styling is achieved in Gatsby using CSS imports in `gatsby-browser.js`. In Astro, you will import `.css` files directly into a main layout component to achieve global styles.
 
@@ -526,7 +526,7 @@ This page layout shows one header when visiting the home page, and a different h
   </html>
   ```
 
-3. Add any needed JavaScript, props, imports.
+3. Add any needed imports, props, and JavaScript
   
   To conditionally render a header based on the page route and title in Astro:
 
