--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -15,7 +15,7 @@ Here are some key concepts and migration strategies to help you get started. Use
 Next.js and Astro share some similarities that will help you migrate your project:
 
 - The [syntax of `.astro` files is similar to JSX](/en/core-concepts/astro-components/#differences-between-astro-and-jsx). Writing Astro should feel familiar.
-- Astro projects can also be SSG or [SSR with page level prerendering](/en/guides/server-side-rendering/#prerendering).
+- Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
 - Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
 - Astro has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
@@ -77,7 +77,7 @@ You can also pass a `--template` argument to the `create astro` command to start
 Then, copy your existing Next project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
-Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
+Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox, or Gitpod.
 :::
 
 ### Install integrations (optional)
@@ -333,7 +333,7 @@ When part of a [content collection](/en/guides/content-collections/), Markdown a
 
 ### Migrating Tests
 
-As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box, if you have been able to match the markup of your Next site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
+As Astro outputs raw HTML, it is possible to write end-to-end tests using the output of the build step. Any end-to-end tests written previously might work out-of-the-box if you have been able to match the markup of your Next site. Testing libraries such as Jest and React Testing Library can be imported and used in Astro to test your React components.
 
 See Astro's [testing guide](/en/guides/testing/) for more.
 
@@ -431,9 +431,9 @@ Convert any inline style objects (`style={{fontWeight: "bold"}}`) to inline HTML
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
-You may also need to replace any CSS-in-JS libraries (e.g. styled components) with other available CSS options in Astro.
+You may also need to replace any CSS-in-JS libraries (e.g. styled-components) with other available CSS options in Astro.
 
-Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code required!
+Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
 
 See more about [Styling in Astro](/en/guides/styling/).
 
@@ -630,12 +630,12 @@ Note that:
 </ul>
 ```
 
-3. Add any needed imports, props and JavaScript
+3. Add any needed imports, props, and JavaScript
 
 Note that:
 
 - the `getStaticProps` function is no longer needed. Data from the API is fetched directly in the code fence.
-- A `<Layout>` component is imported, and wraps the page templating.
+- A `<Layout>` component is imported and wraps the page templating.
 
 ```astro ins={2,4-16,19,31} title="src/pages/index.astro"
 ---
@@ -674,14 +674,14 @@ const pokemons = resJson.results.map(pokemon => {
 {/* 
 ### Next dynamic routing to Astro
 
-This is a Next.js dynamic routing page (`pages/pokemon/[name].js`) that generates a detail screen for each of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
+This is a Next.js dynamic routing page (`pages/pokemon/[name].js`) that generates a detailed screen for each of the first 151 Pokémon using [the REST PokéAPI](https://pokeapi.co/).
 
 Here's how to recreate that in `src/pages/pokemon/[name].astro`, also using `getStaticPaths()` in Astro.
 
 **[tl/dr]:**
 1. Identify the return().
 2. Convert JSX to Astro by replacing Next or React syntax with Astro/HTML syntax.
-3. Add any needed JavaScript, props, imports.
+3. Add any needed imports, props, and JavaScript
 
 ```jsx title="pages/pokemon/[name].js" {11-33}
 import { useRouter } from 'next/router';
@@ -795,7 +795,7 @@ import styles from '../../styles/pokemon-entry.module.css';
   </div>
 </Layout>
 ```
-#### Add any needed imports, props and JavaScript
+#### Add any needed imports, props, and JavaScript
 
 
 1. Convert Next's `getStaticPaths()` function to Astro's `getStaticPaths()` by removing the `paths` route prefix and returning an array. (Otherwise, the functions are the same.) This function goes into Astro's code fence.
