--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -398,7 +398,7 @@ See more about [specific `<slot />` usage in Astro](/en/core-concepts/astro-comp
 
 Convert any instances of `getStaticProps()` to `Astro.glob()` or `getCollections()` to access data from other files in your project source. To [fetch remote data](/en/guides/data-fetching/), use `fetch()`.
 
-These data requests are made in the frontmatter of the Astro component using the data, and use top-level await.
+These data requests are made in the frontmatter of the Astro component and use top-level await.
 
 ```astro title="src/pages/index.astro"
 ---
