content collections in styling, markdown pages

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -6,6 +6,7 @@ i18nReady: true
 ---
 
 import Since from '~/components/Since.astro'
+import FileTree from '~/components/FileTree.astro'
 
 [Markdown](https://daringfireball.net/projects/markdown/) is commonly used to author text-heavy content like blog posts and documentation. Astro includes built-in support for standard Markdown files. 
 
@@ -14,6 +15,28 @@ With the [@astrojs/mdx integration](/en/guides/integrations-guide/mdx/) installe
 Use either or both types of files to write your Markdown content!
 
 ## Markdown and MDX Pages
+
+### Content collections 
+
+Astro allows you to manage your Markdown and MDX files in Astro in a special `src/content/` folder. [Content collections](/en/guides/content-collections/) will organize your content, validate your frontmatter, and provide automatic TypeScript type-safety of fetched content. 
+
+<FileTree>
+- src/content/
+  - **newsletter/** 
+    - week-1.md
+    - week-2.md
+    - week-3.md
+  - **authors/**
+    - grace-hopper.md
+    - alan-turing.md
+    - batman.md
+</FileTree>
+
+
+Available in both SSG and SSR mode, collections can optionally include schemas to enforce consistent frontmatter within each collection and provide helpful autocompletion.
+
+See more about using [content collections in Astro](/en/guides/content-collections/).
+
 
 ### File-based Routing
 
@@ -131,6 +154,9 @@ const {frontmatter} = Astro.props;
 </html>
 ```
 
+You can apply global styles to your Markdown with [`<style>` tags](/en/guides/styling/#global-styles) and [imported stylesheets](/en/guides/styling/#external-styles) in your layout component.
+
+
 📚 Learn more about [Markdown Layouts](/en/core-concepts/layouts/#markdownmdx-layouts).
 
 
@@ -150,7 +176,6 @@ I can link internally to [my conclusion](#conclusion) on the same page when writ
 
 I can use the URL `https://my-domain.com/page-1/#introduction` to navigate directly to my Introduction on the page. 
 ```
-
 
 ### Escaping special characters
 
@@ -428,7 +453,7 @@ You can customize how remark parses your Markdown in `astro.config.mjs`. See the
 
 ### Markdown Plugins
 
-Astro supports adding third-party [remark](https://github.com/remarkjs/remark) and [rehype](https://github.com/rehypejs/rehype) plugins for Markdown and MDX. These plugins allow you to extend your Markdown with new capabilities, like [auto-generating a table of contents](https://github.com/remarkjs/remark-toc), [applying accessible emoji labels](https://github.com/florianeckerstorfer/remark-a11y-emoji), and more. 
+Astro supports adding third-party [remark](https://github.com/remarkjs/remark) and [rehype](https://github.com/rehypejs/rehype) plugins for Markdown and MDX. These plugins allow you to extend your Markdown with new capabilities, like [auto-generating a table of contents](https://github.com/remarkjs/remark-toc), [applying accessible emoji labels](https://github.com/florianeckerstorfer/remark-a11y-emoji), and [styling your Markdown](/en/guides/styling/#markdown-styling). 
 
 We encourage you to browse [awesome-remark](https://github.com/remarkjs/awesome-remark) and [awesome-rehype](https://github.com/rehypejs/awesome-rehype) for popular plugins! See each plugin's own README for specific installation instructions.
 
