--- a/src/pages/en/guides/styling.mdx
+++ b/src/pages/en/guides/styling.mdx
@@ -12,7 +12,7 @@ import Since from '../../../components/Since.astro';
 
 Astro was designed to make styling and writing CSS a breeze. Write your own CSS directly inside of an Astro component or import your favorite CSS library like [Tailwind][tailwind]. Advanced styling languages like [Sass][sass] and [Less][less] are also supported.
 
-## Styling in Astro
+## Styling in Astro Components
 
 Styling an Astro component is as easy as adding a `<style>` tag to your component or page template. When you place a `<style>` tag inside of an Astro component, Astro will detect the CSS and handle your styles for you, automatically.
 
@@ -481,6 +481,13 @@ Vue in Astro supports the same methods as `vue-loader` does:
 
 Svelte in Astro also works exactly as expected: [Svelte Styling Docs][svelte-style].
 
+## Markdown Styling
+
+Any Astro styling methods are available to a [Markdown layout component](/en/core-concepts/layouts/#markdownmdx-layouts).
+
+You can apply global styles to your Markdown content by adding [`<style>` tags](#global-styles) and [imported stylesheets](#external-styles) to the layout that wraps your page content. You can also add [CSS integrations](#css-integrations) including [Tailwind](/en/guides/integrations-guide/tailwind).
+
+Additionally, you can install and use [Markdown plugins](/en/guides/markdown-content/#markdown-plugins) such as the [Tailwind/typography plugin](https://tailwindcss.com/docs/typography-plugin) for styling Markdown.
 
 ## Advanced
 
