update with link now that section exists

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -154,7 +154,7 @@ const {frontmatter} = Astro.props;
 </html>
 ```
 
-You can apply global styles to your Markdown with [`<style>` tags](/en/guides/styling/#global-styles) and [imported stylesheets](/en/guides/styling/#external-styles) in your layout component.
+You can also [style your Markdown](/en/guides/styling/#markdown-styling) in your layout component.
 
 
 📚 Learn more about [Markdown Layouts](/en/core-concepts/layouts/#markdownmdx-layouts).
