--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -16,7 +16,7 @@ Mais, un composant de mise en page n'a rien de spécial ! Ils peuvent [accepter 
 
 Les composants de mise en pages sont généralement placés dans un dossier `src/layouts` dans votre projet pour l'organisation, mais ce n'est pas une obligation.
 
-## Exemple de mise en page
+## Exemple de composant de mise en page
 
 **`src/layouts/MySiteLayout.astro`**
 
