Fix: upgrade from English translation

--- a/src/pages/fr/core-concepts/layouts.mdx
+++ b/src/pages/fr/core-concepts/layouts.mdx
@@ -1,9 +1,8 @@
 ---
 layout: ~/layouts/MainLayout.astro
 title: Composants Layout
-description: >-
-  Une introduction aux composants Layouts, un type de composant Astro qui est
-  partagé entre les pages pour des modèles communs.
+description: Une introduction aux composants Layouts, un type de composant Astro qui est partagé entre les pages pour des modèles communs.
+i18nReady: true
 ---
 
 Les **Layouts** (ou "mise-en-pages" en français) sont des [composants Astro](/fr/core-concepts/astro-components/) utilisés pour fournir une structure d'interface utilisateur réutilisable, comme un modèle de page.
@@ -56,6 +55,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 </MySiteLayout>
 ```
 
+
 📚 Apprenez-en plus sur [les Slots](/fr/core-concepts/astro-components/#les-emplacements-slots).
 
 ## Mises en page Markdown/MDX
@@ -63,12 +63,6 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 Les mises en page sont particulièrement utiles pour [les pages Markdown et MDX](/fr/guides/markdown-content/#pages-markdown-et-mdx) qui, autrement, n'auraient pas de formatage de page.
 
 Astro fournit une propriété spéciale `layout` frontmatter pour spécifier le composant `.astro` à utiliser comme mise en page.
-
-## Inclure des mises en page
-
-Les composants de mise en page ne nécessitent pas de contenir une page HTML complète. Vous pouvez découper vos mises en page en composants plus petits, et ensuite réutiliser ces composants pour créer des mises en page plus flexibles et puissantes dans votre projet.
-
-Par exemple, une mise en page commune pour les articles de blog peut afficher un titre, une date et un auteur. Un composant de mise en page `BlogPostLayout.astro` pourrait ajouter cette UI à la page et aussi utiliser une mise en page plus générale pour gérer le reste de votre page.
 
 ```markdown title="src/pages/page.md" {2} 
 ---
@@ -82,9 +76,11 @@ Toutes les propriétés de frontmatter sont disponibles comme propriétés pour 
 La propriété `layout` est la seule propriété spéciale fournie par Astro.
 
 Vous pouvez l'utiliser dans les fichiers Markdown et MDX situés dans `src/pages/`.
+
 ```
 
 Une mise en page typique pour les pages Markdown ou MDX inclut :
+
 1. La propriété `frontmatter` pour accéder au frontmatter et aux autres données de la page Markdown ou MDX.
 2. Un [`<slot />`](/fr/core-concepts/astro-components/#les-emplacements-slots) par défaut pour indiquer où le contenu Markdown/MDX de la page doit être rendu.
 
@@ -105,6 +101,36 @@ const { frontmatter } = Astro.props;
     <!-- 2. Le HTML rendu sera passé dans le slot par défaut. -->
     <slot />
     <p>Écrit le : {frontmatter.date}</p>
+  </body>
+</html>
+```
+
+Vous pouvez définir le [type `Props`](/fr/guides/typescript/#propriétés-de-composant) d'une mise en page, avec l'helper `MarkdownLayoutProps` ou `MDXLayoutProps` :
+
+```astro title="src/layouts/BaseLayout.astro" ins={2,4-9}
+---
+import type { MarkdownLayoutProps } from 'astro';
+
+type Props = MarkdownLayoutProps<{
+  // Définir les propriétés de frontmatter ici
+  title: string;
+  author: string;
+  date: string;
+}>;
+
+// Maintenant, `frontmatter`, `url`, et autres propriétés de mise en page Markdown
+// sont accessibles avec une sécurité de type
+const { frontmatter, url } = Astro.props;
+---
+<html>
+  <head>
+    <meta rel="canonical" href={new URL(url, Astro.site).pathname}>
+    <title>{frontmatter.title}</title>
+  </head>
+  <body>
+    <h1>{frontmatter.title} by {frontmatter.author}</h1>
+    <slot />
+    <p>Written on: {frontmatter.date}</p>
   </body>
 </html>
 ```
@@ -189,8 +215,7 @@ function fancyJsHelper() {
 </BaseLayout>
 ```
 
-Ensuite, vos valeurs sont disponibles à travers `Astro.props` dans votre mise en page,
-et votre contenu MDX va être injecté dans la page où votre composant `<slot />` est écrit : 
+Ensuite, vos valeurs sont disponibles à travers `Astro.props` dans votre mise en page, et votre contenu MDX va être injecté dans la page où votre composant `<slot />` est écrit : 
 
 ```astro "fancyJsHelper" "title"
 ---
