chore: update tutorial link

--- a/src/pages/en/tutorial/5-astro-api/4.mdx
+++ b/src/pages/en/tutorial/5-astro-api/4.mdx
@@ -134,4 +134,4 @@ Individuals can subscribe to your feed in a feed reader, and receive a notificat
 
 ### Resources
 
-- [RSS item generation in Astro](/en/guides/rss/#1-importmetaglob-result)
+- [RSS item generation in Astro](/en/guides/rss/#using-glob-imports)
