--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -95,7 +95,7 @@ export async function get(context) {
 ```
 
 :::tip
-The `link` property of each feed item can be computed from the content entry `slug`. See [our guide on generating pages from content collections](https://docs.astro.build/en/guides/content-collections/#generating-pages-from-content-collections) to see how slugs correspond to routes.
+The `link` property of each feed item can be computed from the content entry `slug`. See [our guide on generating pages from content collections](/en/guides/content-collections/#generating-pages-from-content-collections) to see how slugs correspond to routes.
 :::
 
 `@astrojs/rss` also exposes an `rssSchema` for use with collection schemas. This ensures your frontmatter contains all properties expected by an RSS feed item. You can apply this schema to your content config like so:
