Update based on feedback

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -276,7 +276,7 @@ const enDocs = await getCollection('docs', ({ id }) => {
 
 ### `getEntryBySlug()`
 
-`getEntryBySlug()` is function that returns a specific entry in a collection by its slug (a slug that can be used in a URL). Both of these are required parameters.
+`getEntryBySlug()` is function that returns a specific entry in a collection by its slug (URL-ready). Both of these are required parameters.
 
 ```astro
 ---
