--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -63,7 +63,7 @@ export function get(context) {
 
 ## Generating `items`
 
-The `items` field accepts a list of RSS feed objects, each with a `link`, `title`, `pubDate`, and optional `description` and `customData` fields. You can generate this array from a content collection or by using glob imports.
+The `items` field accepts a list of RSS feed objects, each with a `link`, `title`, `pubDate`, and optional `description`, `content`, and `customData` fields. You can generate this array from a content collection or by using glob imports.
 
 ### Using content collections
 
