ci: update error reference docs

--- a/src/pages/en/reference/errors/client-address-not-available.mdx
+++ b/src/pages/en/reference/errors/client-address-not-available.mdx
@@ -17,7 +17,7 @@ import DontEditWarning from '../../../../components/DontEditWarning.astro'
 > **ClientAddressNotAvailable**: `Astro.clientAddress` is not available in the `ADAPTER_NAME` adapter. File an issue with the adapter to add support. (E03002)
 
 ## What went wrong?
-The adapter you.'re using unfortunately does not support `Astro.clientAddress`.
+The adapter you're using unfortunately does not support `Astro.clientAddress`.
 
 **See Also:**
 -  [Official integrations](/en/guides/integrations-guide/#official-integrations)
