Apply Chris' suggestions from code review
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/src/pages/en/guides/markdown-content.mdx
+++ b/src/pages/en/guides/markdown-content.mdx
@@ -18,22 +18,19 @@ Use either or both types of files to write your Markdown content!
 
 ### Content collections 
 
-Astro allows you to manage your Markdown and MDX files in Astro in a special `src/content/` folder. [Content collections](/en/guides/content-collections/) will organize your content, validate your frontmatter, and provide automatic TypeScript type-safety of fetched content. 
+You can manage your Markdown and MDX files in Astro in a special `src/content/` folder. [Content collections](/en/guides/content-collections/) help you organize your content, validate your frontmatter, and provide automatic TypeScript type-safety while working with your content. 
 
 <FileTree>
 - src/content/
   - **newsletter/** 
     - week-1.md
     - week-2.md
-    - week-3.md
   - **authors/**
     - grace-hopper.md
     - alan-turing.md
-    - batman.md
 </FileTree>
 
 
-Available in both SSG and SSR mode, collections can optionally include schemas to enforce consistent frontmatter within each collection and provide helpful autocompletion.
 
 See more about using [content collections in Astro](/en/guides/content-collections/).
 
