edit: less content collections explanation
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -67,7 +67,7 @@ The `items` field accepts a list of RSS feed objects, each with a `link`, `title
 
 ### Using content collections
 
-You may use [content collections](/en/guides/content-collections/) to manage your Markdown or MDX content. This exposes a `getCollection()` function to retrieve a list of items that you can map to an RSS feed.
+To create an RSS feed of pages managed in [content collections](/en/guides/content-collections/), you use the `getCollection()` function to retrieve the list your of items.
 
 
 ```js title="src/pages/rss.xml.js" "items:" "const blog = await getCollection('blog');"
