edit: tighten `rssSchema` intro
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -97,7 +97,7 @@ export async function get(context) {
 The `link` property of each feed item can be computed from the content entry `slug`. See [our guide on generating pages from content collections](/en/guides/content-collections/#generating-pages-from-content-collections) to see how slugs correspond to routes.
 :::
 
-`@astrojs/rss` also exposes an `rssSchema` for use with collection schemas. This ensures your frontmatter contains all properties expected by an RSS feed item. You can apply this schema to your content config like so:
+You can configure your collection schema to enforce these expected RSS properties. Import and apply `rssSchema` to ensure that each collection entry produces a valid RSS feed item.
 
 ```js title="src/content/config.ts" "rssSchema"
 import { rssSchema } from '@astrojs/rss';
