--- a/src/pages/es/reference/cli-reference.mdx
+++ b/src/pages/es/reference/cli-reference.mdx
@@ -114,10 +114,13 @@ Este comando solo verifica los tipos dentro de los archivos `.astro`.
 ## `astro sync`
 
 <p>
-  <Since v="1.7.0" />
+  <Since v="2.0.0" />
 </p>
+:::tip
+Ejecutar `astro dev` o `astro build` ejecutará el comando `sync` también.
+:::
 
-Genera tipos de TypeScript para todos los módulos de Astro. Hoy, esto incluye el módulo `astro:content` para la (experimental) [API de colecciones de contenido](/es/guides/content-collections/).
+Genera tipos de TypeScript para todos los módulos de Astro. Esto establece un [archivo `src/env.d.ts`](/es/guides/typescript/#configuración) para inferencia de tipos y define el módulo `astro:content` para la [API de colecciones de contenido](/es/guides/content-collections/).
 
 ## `astro add`
 
