--- a/src/pages/es/reference/error-reference.mdx
+++ b/src/pages/es/reference/error-reference.mdx
@@ -44,5 +44,7 @@ La siguiente referencia es una lista completa de los errores que puedes encontra
 
 - [**MarkdownFrontmatterParseError**](/es/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
 - [**MarkdownContentSchemaValidationError**](/es/reference/errors/markdown-content-schema-validation-error/) (E06002)<br/>Content collection frontmatter invalid.
+- [**InvalidFrontmatterInjectionError**](/es/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
+- [**MdxIntegrationMissingError**](/es/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
 - [**ConfigNotFound**](/es/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
 - [**ConfigLegacyKey**](/es/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
