Update `styling.mdx` to most recent changes

--- a/src/pages/pt-br/guides/styling.mdx
+++ b/src/pages/pt-br/guides/styling.mdx
@@ -474,6 +474,14 @@ Em Astro, Vue suporta os mesmos métodos que `vue-loader` suporta:
 
 Em Astro, Svelte também funciona como esperado: [Documentação de estilização no Svelte][svelte-style].
 
+## Estilização de Markdown
+
+Quaisquer métodos de estilização no Astro estão disponíveis em um [componente de layout Markdown](/pt-br/core-concepts/layouts/#layouts-markdownmdx).
+
+Você pode aplicar estilos globais ao seu conteúdo Markdown ao adicionar [tags `<style>`](#estilos-globais) e [folhas de estilo importadas](#estilos-externos) ao layout que envolve o conteúdo da sua página. Você também pode adicionar [integrações CSS](#integrações-css) incluindo [Tailwind](/pt-br/guides/integrations-guide/tailwind/).
+
+Se você estiver utilizando Tailwind, o [plugin typography](https://tailwindcss.com/docs/typography-plugin) pode ser útil para estilizar Markdown.
+
 ## Avançado
 
 :::caution
