Update `markdown-content.mdx` translation

--- a/src/pages/pt-br/guides/markdown-content.mdx
+++ b/src/pages/pt-br/guides/markdown-content.mdx
@@ -5,7 +5,8 @@ description: Aprenda como criar conteúdo usando Markdown ou MDX no Astro
 i18nReady: true
 ---
 import Tabs from '../../../components/tabs/Tabs';
-import Since from '~/components/Since.astro'
+import Since from '~/components/Since.astro';
+import FileTree from '~/components/FileTree.astro';
 
 
 [Markdown](https://daringfireball.net/projects/markdown/) é comumente usado para criar conteúdo com muito texto, como postagens de blog e documentação. Astro inclui suporte nativo para arquivos Markdown padrão (`.md`). 
@@ -15,6 +16,23 @@ Com a [integração `@astrojs/mdx`](/pt-br/guides/integrations-guide/mdx/) insta
 Use um ou ambos os tipos de arquivo para escrever seu conteúdo Markdown!
 
 ## Páginas Markdown e MDX
+
+### Coleções de conteúdo 
+
+Você pode gerenciar seus arquivos Markdown e MDX no Astro em um diretório especial `src/content/`. [Coleções de conteúdo](/pt-br/guides/content-collections/) te ajudam a organizar seu conteúdo, validar seu frontmatter e a providenciar segurança de tipos do TypeScript automaticamente enquanto trabalha no seu conteúdo.
+
+<FileTree>
+- src/content/
+  - **newsletter/** 
+    - semana-1.md
+    - semana-2.md
+  - **autores/**
+    - grace-hopper.md
+    - alan-turing.md
+</FileTree>
+
+
+Veja mais sobre como utilizar [coleções de conteúdo no Astro](/pt-br/guides/content-collections/).
 
 ### Roteamento baseado em arquivos
 
@@ -133,6 +151,8 @@ const {frontmatter} = Astro.props;
    <!-- ... -->
 </html>
 ```
+
+Você também pode [estilizar seu Markdown](/pt-br/guides/styling/#estilização-de-markdown) no seu componente de layout.
 
 📚 Aprenda mais sobre [Layouts Markdown](/pt-br/core-concepts/layouts/#layouts-markdownmdx).
 
