--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -126,39 +126,35 @@ Astro's [`<Image />` component](/en/guides/integrations-guide/image/#image-) all
 
 This component is useful for images where you want to keep a consistent size across displays, or closely control the quality of an image (e.g. logos).
 
-For responsive images, or art direction, use the `<Picture />` component instead.
+For responsive images, or art direction, [use the `<Picture />` component](#picture--) instead.
 
 #### Local Images in `src/`
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src), and [`alt`](/en/guides/integrations-guide/image/#alt))
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src): Import your image in frontmatter and pass it directly to the attribute
+- [`alt`](/en/guides/integrations-guide/image/#alt)
 
-Import your image in frontmatter and pass it directly to the `<Image />` component's `src` attribute.
-
-`alt` is required, but [all other properties](/en/guides/integrations-guide/image/#image-) are optional and will default to the image file's original properties if not provided.
+[All other properties](/en/guides/integrations-guide/image/#image-) are optional and will default to the image file's original properties if not provided.
 
 #### Remote Images
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src), [`alt`](/en/guides/integrations-guide/image/#alt), [`format`](/en/guides/integrations-guide/image/#format), and dimensions)
-
-Pass a full URL to the `<Image />` component's `src` attribute and include a value for `alt`.
-
-The `<Image />` component cannot determine the original file format of a remote image, so you must provide an output `format` (e.g. png, avif) to transform your remote image.
-
-You must also either provide [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height), or one of the dimensions plus an [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio) to avoid content layout shifts because the `<Image />` component does not know the dimensions of a remote image.
-
-[All other properties](/en/guides/integrations-guide/image/#image-) are optional.
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src): A full image URL
+- [`format`](/en/guides/integrations-guide/image/#format): An output format is required to transform your remote image as the `<Image />` component cannot determine the original file format of a remote image.
+- Dimensions: Because the `<Image />` component does not know the dimensions of a remote image, one of the following must be provided to avoid content layout shifts:
+  - [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height)
+  - One of the dimensions plus [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio)
+- [`alt`](/en/guides/integrations-guide/image/#alt)
 
 #### Local Images in `public/`
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src), [`alt`](/en/guides/integrations-guide/image/#alt), [`format`](/en/guides/integrations-guide/image/#format), and dimensions)
-
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
-
-It will be treated as a remote image, which requires either both [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height), or one dimension and an [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio) attribute. 
-
-A value for the `format` attribute (e.g. png, avif) to transform your image is required.
-
-[All other properties](/en/guides/integrations-guide/image/#image-) are optional.
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src): A path relative to the public folder
+- [`format`](/en/guides/integrations-guide/image/#format) : Required to transform your image
+- Dimensions: Because the image will be treated as a remote image, one of the following is required:
+  - [`width`](/en/guides/integrations-guide/image/#width) and [`height`](/en/guides/integrations-guide/image/#height)
+  - One of the dimensions plus [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio)
+- [`alt`](/en/guides/integrations-guide/image/#alt)
 
 Your original image will be copied unprocessed to the build folder, like all files located in `public/`, and Astro's image integration will also return optimized versions of the image.
 
@@ -212,45 +208,40 @@ Check out MDN's guide for more information about [responsive images and art dire
 
 #### Local Images
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1))
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src-1): Import your image in frontmatter and pass it directly to the attribute
+- [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1)
 
-Import your image in frontmatter and pass it directly to the `<Picture />` component's `src` attribute.
+You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional. By default, the `<Picture />` component's [`formats`](/en/guides/integrations-guide/image/#formats) will include `avif` and `webp` in addition to the image's original format if not specified.
 
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
-
-By default, the `<Picture />` component's [`formats`](/en/guides/integrations-guide/image/#formats) will include `avif` and `webp` in addition to the image's original format if not specified.
 
 #### Remote Images 
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src-1): A full image URL
+- [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1): Required to ensure the correct height can be calculated at build time for remote images
+- [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1)
 
-Pass a full URL to the `<Picture />` component's  `src` attribute.
-
-A value for `aspectRatio` is also required to ensure the correct height can be calculated at build time for remote images.
-
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
-
-Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of remote images is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional. By default, only `webp` and `avif` will be included in [`formats`](/en/guides/integrations-guide/image/#formats). The original image format of images in the `public/` folder is unknown and will not be included.
 
 #### Local Images in `public/`
 
-(required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
+Required attributes:
+- [`src`](/en/guides/integrations-guide/image/#src-1): A path relative to the public folder
+- [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1): Required to ensure the correct height can be calculated at build time as the image will be treated as a remote image
+- [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1)
 
-Pass the component's `src` attribute a path relative to the public folder and include a value for `alt`. 
-
-The image will be treated as a remote image, so a value for `aspectRatio` is also required to ensure the correct height can be calculated at build time.
-
-You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional.
-
-Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of images in the `public/` folder is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
+You must provide the component with guidance for image widths and screen sizes, but [all other properties](/en/guides/integrations-guide/image/#picture-) are optional. By default, only `webp` and `avif` will be included in [`formats`](/en/guides/integrations-guide/image/#formats). The original image format of images in the `public/` folder is unknown and will not be included.
 
 Your original image will be copied unprocessed to the build folder, like all files located in `public/`, and Astro's image integration will also return optimized versions of the image.
+
 
 #### Examples
 
 ```astro
 ---
 import { Picture } from '@astrojs/image/components';
+
 import localImage from '../assets/logo.png';
 const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png';
 ---
