--- a/src/pages/en/guides/integrations-guide/image.mdx
+++ b/src/pages/en/guides/integrations-guide/image.mdx
@@ -156,13 +156,11 @@ In addition to the component-specific properties, any valid HTML attribute for t
 
 </p>
 
-Source for the original image file.
+Source for the original image file. The value depends on where the image is located in:
 
-For images located in your project's `src`: use the file path relative to the `src` directory. (e.g. `src="../assets/source-pic.png"`)
-
-For images located in your `public` directory: use the URL path relative to the `public` directory. (e.g. `src="/images/public-image.jpg"`)
-
-For remote images, provide the full URL. (e.g. `src="https://astro.build/assets/blog/astro-1-release-update.avif"`)
+- Project's `src`: Use the file path relative to the `src` directory. (e.g. `src="../assets/source-pic.png"`)
+- `public` directory: Use the URL path relative to the `public` directory. (e.g. `src="/images/public-image.jpg"`)
+- Remote: Provide the full URL. (e.g. `src="https://astro.build/assets/blog/astro-1-release-update.avif"`)
 
 #### alt
 
@@ -310,13 +308,11 @@ In addition to the component-specific properties, any valid HTML attribute for t
 
 </p>
 
-Source for the original image file.
+Source for the original image file. The value depends on where the image is located in:
 
-For images located in your project's `src`: use the file path relative to the `src` directory. (e.g. `src="../assets/source-pic.png"`)
-
-For images located in your `public` directory: use the URL path relative to the `public` directory. (e.g. `src="/images/public-image.jpg"`)
-
-For remote images, provide the full URL. (e.g. `src="https://astro.build/assets/blog/astro-1-release-update.avif"`)
+- Project's `src`: Use the file path relative to the `src` directory. (e.g. `src="../assets/source-pic.png"`)
+- `public` directory: Use the URL path relative to the `public` directory. (e.g. `src="/images/public-image.jpg"`)
+- Remote: Provide the full URL. (e.g. `src="https://astro.build/assets/blog/astro-1-release-update.avif"`)
 
 #### alt
 
