--- a/src/pages/es/reference/configuration-reference.mdx
+++ b/src/pages/es/reference/configuration-reference.mdx
@@ -510,12 +510,12 @@ Astro usa [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) por
 
 <p>
 
-**Type:** `boolean`<br />
-**Default:** `true`<br />
+**Tipo:** `boolean`<br />
+**Por defecto:** `true`<br />
 <Since v="2.0.0" />
 </p>
 
-Astro uses the [SmartyPants formatter](https://daringfireball.net/projects/smartypants/) by default. To disable this, set the `smartypants` flag to `false`:
+Astro usa el formateador [SmartyPants](https://daringfireball.net/projects/smartypants/) por defecto. Para deshabilitarlo, establezca la propiedad `smartypants` a `false`:
 
 ```js
 {
