Document version of RSS package needed for new features (#2421)
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/rss.mdx
+++ b/src/pages/en/guides/rss.mdx
@@ -107,6 +107,8 @@ export const collections = { blog };
 
 ### Using glob imports
 
+<Since v="2.1.0" pkg="@astrojs/rss" />
+
 To create an RSS feed from documents in `src/pages/`, use the `pagesGlobToRssItems()` helper. This accepts an [`import.meta.glob`](https://vitejs.dev/guide/features.html#glob-import) result and outputs an array of valid RSS feed items (see [more about writing glob patterns](/en/guides/imports/#glob-patterns) for specifying which pages to include).
 
 This function assumes, but does not verify, that all necessary feed properties are present in each document's frontmatter. If you encounter errors, verify each page frontmatter manually.
@@ -125,6 +127,13 @@ export async function get(context) {
   });
 }
 ```
+
+:::note[Using an older version?]
+In versions of `@astrojs/rss` before v2.1.0, pass your glob result straight to `items` without the `pagesGlobToRssItems()` wrapper:
+```js
+items: import.meta.glob('./blog/*.{md,mdx}'),
+```
+:::
 
 ### Including full post content
 
