--- a/src/pages/pt-br/guides/styling.mdx
+++ b/src/pages/pt-br/guides/styling.mdx
@@ -117,7 +117,7 @@ const corPlanoFundo = "rgb(24 121 78)";
 
 No Astro, atributos HTML como `class` não são passados automaticamente para componente filhos.
 
-Ao invés disso, aceite uma prop `class` no componente filho e aplique-a no elemento raiz. Ao fazer desestruturação, você precisa renomeá-la, pois `class` é uma [palavra reservada](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words) no JavaScript.
+Ao invés disso, aceite uma prop `class` no componente filho e aplique-a no elemento raiz. Ao fazer desestruturação, você precisa renomeá-la, pois `class` é uma [palavra reservada](https://developer.mozilla.org/pt-BR/docs/Web/JavaScript/Reference/Lexical_grammar#palavras-chave_reservadas_do_ecmascript_2015) no JavaScript.
 
 ```astro title="src/components/MeuComponente.astro" {2,4}
 ---
